adicionando icone de paintbrush

--- a/index.html
+++ b/index.html
@@ -69,6 +69,15 @@
                 </div>
               </div>
             </div>
+
+            <div class="input-wrapper">
+              <label>Descrição</label>
+              <textarea
+                placeholder="Detalhes do evento"
+                cols="5"
+                rows="5"
+              ></textarea>
+            </div>
           </fieldset>
         </form>
       </div>
