--- a/index.html
+++ b/index.html
@@ -78,6 +78,145 @@
                 rows="5"
               ></textarea>
             </div>
+
+            <div class="splashbrush">
+              <div class="container">
+                <div class="heading">
+                  <img src="./assets/paintbrush-vertical.svg" />
+                  <span>Personalização</span>
+                </div>
+                <div class="colors">
+                  <span>Cor principal</span>
+
+                  <div class="color-pallete">
+                    <div class="color-circle">
+                      <div
+                        class="color"
+                        style="background-color: var(--brand-light)"
+                      ></div>
+                    </div>
+                    <div class="color-circle">
+                      <div
+                        class="color"
+                        style="background-color: var(--navy)"
+                      ></div>
+                    </div>
+                    <div class="color-circle">
+                      <div
+                        class="color"
+                        style="background-color: var(--purple)"
+                      ></div>
+                    </div>
+                    <div class="color-circle">
+                      <div
+                        class="color"
+                        style="background-color: var(--purple)"
+                      ></div>
+                    </div>
+                    <div class="color-circle">
+                      <div
+                        class="color"
+                        style="background-color: var(--pink)"
+                      ></div>
+                    </div>
+                    <div class="color-circle">
+                      <div
+                        class="color"
+                        style="background-color: var(--danger)"
+                      ></div>
+                    </div>
+                    <div class="color-circle">
+                      <div
+                        class="color"
+                        style="background-color: var(--orange)"
+                      ></div>
+                    </div>
+                    <div class="color-circle">
+                      <div
+                        class="color"
+                        style="background-color: var(--yellow)"
+                      ></div>
+                    </div>
+                    <div class="color-circle">
+                      <div
+                        class="color"
+                        style="background-color: var(--lime)"
+                      ></div>
+                    </div>
+                    <div class="color-circle">
+                      <div
+                        class="color"
+                        style="background-color: var(--green)"
+                      ></div>
+                    </div>
+                    <div class="color-circle">
+                      <div
+                        class="color"
+                        style="background-color: var(--cyan)"
+                      ></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="event-theme">
+              <div class="heading-event">
+                <span
+                  style="color: #ffffff; font-family: 'Open Sans', sans-serif"
+                  >Tema do evento</span
+                >
+              </div>
+              <div class="grid">
+                <div class="card">
+                  <img src="./assets/Image.png" />
+                  <p>Aniversário</p>
+                </div>
+                <div class="card">
+                  <img src="./assets/Infantil.png" />
+                  <p>Infantil</p>
+                </div>
+                <div class="card">
+                  <img src="./assets/Formatura.png" />
+                  <p>Formatura</p>
+                </div>
+                <div class="card">
+                  <img src="./assets/Casamento.png" />
+                  <p>Casamento</p>
+                </div>
+                <div class="card">
+                  <img src="./assets/Bebe.png" />
+                  <p>Chá de Bebê</p>
+                </div>
+                <div class="card">
+                  <img src="./assets/Panela.png" />
+                  <p>Chá de Panela</p>
+                </div>
+                <div class="card">
+                  <img src="./assets/Carnaval.png" />
+                  <p>Carnaval</p>
+                </div>
+                <div class="card">
+                  <img src="./assets/Pascoa.png" />
+                  <p>Páscoa</p>
+                </div>
+                <div class="card">
+                  <img src="./assets/Sao joao.png" />
+                  <p>São João</p>
+                </div>
+                <div class="card">
+                  <img src="./assets/Halloween.png" />
+                  <p>Halloween</p>
+                </div>
+                <div class="card">
+                  <img src="./assets/Natal.png" />
+                  <p>Natal</p>
+                </div>
+                <div class="card">
+                  <img src="./assets/Outro.png" />
+                  <p>Outro</p>
+                </div>
+              </div>
+            </div>
           </fieldset>
         </form>
       </div>
