componente de formulario finalizado

--- a/index.html
+++ b/index.html
@@ -217,6 +217,35 @@
                 </div>
               </div>
             </div>
+            <div class="style-container">
+              <div class="heading-style">
+                <span>Estilo</span>
+                <div class="style-input-wrapper">
+                  <input type="checkbox" id="chk" />
+                  <div class="wrapper">
+                    <label for="chk" class="switch">
+                      <span class="slider"></span>
+                    </label>
+                    <span class="label">Escuro</span>
+                  </div>
+                </div>
+              </div>
+              <div class="file-container">
+                <div class="heading-style">
+                  <span>Foto de Capa</span>
+                </div>
+                <div class="file-upload-wrapper">
+                  <label for="file-upload" class="custom-file-upload">
+                    <span class="upload-icon">
+                      <!-- Ícone de upload (SVG) -->
+                      <img src="./assets/upload.svg" class="img" />
+                    </span>
+                    Selecionar
+                  </label>
+                  <input id="file-upload" type="file" class="file-upload" />
+                </div>
+              </div>
+            </div>
           </fieldset>
         </form>
       </div>
