contact container já feito

--- a/index.html
+++ b/index.html
@@ -217,22 +217,29 @@
                 </div>
               </div>
             </div>
-            <div class="style-container">
-              <div class="heading-style">
-                <span>Estilo</span>
-                <div class="style-input-wrapper">
-                  <input type="checkbox" id="chk" />
-                  <div class="wrapper">
-                    <label for="chk" class="switch">
-                      <span class="slider"></span>
-                    </label>
-                    <span class="label">Escuro</span>
+            <div class="container">
+              <div class="slider-container">
+                <div class="heading-style">
+                  <span>Estilo</span>
+                </div>
+
+                <div class="style-container">
+                  <div class="heading-style">
+                    <div class="style-input-wrapper">
+                      <input type="checkbox" id="chk" />
+                      <div class="wrapper">
+                        <label for="chk" class="switch">
+                          <span class="slider"></span>
+                        </label>
+                        <span class="label">Escuro</span>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
-              <div class="file-container">
+              <div class="picture-container">
                 <div class="heading-style">
-                  <span>Foto de Capa</span>
+                  <span>Foto da capa</span>
                 </div>
                 <div class="file-upload-wrapper">
                   <label for="file-upload" class="custom-file-upload">
@@ -243,6 +250,19 @@
                     Selecionar
                   </label>
                   <input id="file-upload" type="file" class="file-upload" />
+                </div>
+              </div>
+            </div>
+            <div class="contact-container">
+              <div class="contact-heading">
+                <img src="./assets/contact.svg" alt="contact" />
+                <span>Dados para contato</span>
+              </div>
+
+              <div class="input-wrapper">
+                <div class="input">
+                  <label>Nome</label>
+                  <input class="name" type="text" placeholder="Nome Completo" />
                 </div>
               </div>
             </div>
