fazendo o input checkbox

--- a/index.html
+++ b/index.html
@@ -265,6 +265,25 @@
                   <input class="name" type="text" placeholder="Nome Completo" />
                 </div>
               </div>
+
+              <div class="input-wrapper-flex">
+                <div class="input">
+                  <label>E-mail</label>
+                  <input type="email" placeholder="exemplos@gmail.com" />
+                </div>
+                <div class="input">
+                  <label>Telefone</label>
+                  <input type="text" placeholder="(99)9999-9999" />
+                </div>
+              </div>
+            </div>
+
+            <div class="checkbox-wrapper">
+              <input type="checkbox" id="terms" />
+              <span
+                >Li e concordo com os Termos e Condições e com a Política de
+                Privacidade</span
+              >
             </div>
           </fieldset>
         </form>
