--- a/index.html
+++ b/index.html
@@ -277,13 +277,49 @@
                 </div>
               </div>
             </div>
-
-            <div class="checkbox-wrapper">
-              <input type="checkbox" id="terms" />
-              <span
+            <div class="custom-checkbox">
+              <input id="checkbox-1" type="checkbox" />
+              <label
+                for="checkbox-1"
+                style="
+                  font-family: 'Open Sans', sans-serif;
+                  font-size: 1rem;
+                  color: var(--text-heading);
+                "
                 >Li e concordo com os Termos e Condições e com a Política de
-                Privacidade</span
+                Privacidade</label
               >
+            </div>
+            <div class="custom-checkbox">
+              <input id="checkbox-1" type="checkbox" />
+              <label
+                for="checkbox-1"
+                style="
+                  font-family: 'Open Sans', sans-serif;
+                  font-size: 1rem;
+                  color: var(--text-heading);
+                "
+                >Aceito receber atualizações e promoções por e-mail</label
+              >
+            </div>
+            <div class="custom-checkbox">
+              <input id="checkbox-1" type="checkbox" />
+              <label
+                for="checkbox-1"
+                style="
+                  font-family: 'Open Sans', sans-serif;
+                  font-size: 1rem;
+                  color: var(--text-heading);
+                "
+                >Aceito receber atualizações e promoções por SMS</label
+              >
+            </div>
+
+            <div class="button-container">
+              <button>
+                <img src="./assets/ticket.svg" alt="ticket" />
+                Gerar Convite
+              </button>
             </div>
           </fieldset>
         </form>
